--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,7 @@
 <!-- The Side Bar -->
 
+<link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | bust_file_cache }}">
+
 <aside aria-label="Sidebar" id="sidebar" class="d-flex flex-column align-items-end">
   <header class="profile-wrapper">
     <a href="{{ '/' | relative_url }}" id="avatar" class="rounded-circle">
